feature: added a menu bar with save/exit functionality.

--- a/Beb64.GUI.csproj
+++ b/Beb64.GUI.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ModernWPF" Version="1.4.6" />
+  </ItemGroup>
+
 </Project>
